syntax = "proto3";

package hello_world.v1;
option go_package = "github.com/iakrevetkho/archaeopteryx;hello_world";

import "google/api/annotations.proto";

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
}

// The request message containing the user's name
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}
